# Enigmaa

./: .gitignore  .gitmodules  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  compile-openssl.sh  enigma.cc
app/src/main/cpp/openssl-1.1.1n-bin/arm64-v8a/: libcrypto.so.1.1  libssl.so.1.1
app/src/main/cpp/openssl-1.1.1n-bin/x86/: libcrypto.so.1.1  libssl.so.1.1
app/src/main/cpp/openssl-1.1.1n-bin/x86_64/: libcrypto.so.1.1  libssl.so.1.1
app/src/main/java/com/example/enigma/: AddContactFragment.java  App.java  ChatActivity.java  ChatsFragment.java  ContactAdapter.java  ContactItem.java  ContactsFragment.java  FileUtils.java  FirstFragment.java  GenerateKeyFragment.java  GuardSetupFragment.java  InitialSetupActivity.java  LocalAppStorage.java  MainActivity.java  MessageAdapter.java  MessageItem.java  NetworkGraphParser.java  OnionServices.java  ScanQrCodeActivity.java  SecondFragment.java
app/src/main/java/com/example/enigma/circuit/: CircuitBuilder.java
app/src/main/java/com/example/enigma/communications/: MessagingService.java  MessagingServiceWorker.java  ServiceRestarter.java
app/src/main/java/com/example/enigma/database/: AppDatabase.java  Circuit.java  CircuitDao.java  Contact.java  ContactDao.java  ContactWithCircuits.java  Edge.java  EdgeDao.java  Message.java  MessageDao.java  Node.java  NodeDao.java  NodeWithNeighbor.java
app/src/main/java/com/example/enigma/qr/: QrCodeHelper.java
app/src/main/java/com/example/enigma/setup/: GenerateKeyFragment.java  GuardSetupFragment.java  InitialSetupActivity.java
app/src/main/res/layout/: activity_chat.xml  activity_initial_setup.xml  activity_main.xml  activity_scan_qr_code.xml  contact.xml  content_initial_setup.xml  fragment_add_contact.xml  fragment_chats.xml  fragment_contacts.xml  fragment_first.xml  fragment_generate_key.xml  fragment_guard_setup.xml  fragment_second.xml  message.xml
app/src/main/res/menu/: bottom_nav_menu.xml  chats_toolbar_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml  nav_graph.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
